--- a/AUTHORS
+++ b/AUTHORS
@@ -15,4 +15,4 @@ Muzaffar Yousaf <muzaffar@edx.org>
 Usman Khalid <2200617@gmail.com>
 Bastien Abadie <bastien@nextcairn.com>
 Omar Al-Ithawi <oithawi@qrf.org>
-
+Giulio Gratta <giulio@giuliogratta.com>
