--- a/openassessment/locale/eo/LC_MESSAGES/django.po
+++ b/openassessment/locale/eo/LC_MESSAGES/django.po
@@ -8,11 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: edx-ora2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-29 13:04-0400\n"
+"POT-Creation-Date: 2019-09-19 19:09-0400\n"
 "PO-Revision-Date: 2014-06-04 15:41-0400\n"
 "Last-Translator: Muhammad Ayub khan <ayubkhan@edx.org>\n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
-"Language: en\n"
+"Language: eo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -430,6 +430,18 @@ msgstr ""
 "Éntér thé däté änd tïmé whén äll péér ässéssménts müst ßé çömplété. Ⱡ'σяєм "
 "ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя #"
 
+#: openassessment/templates/openassessmentblock/edit/oa_edit_peer_assessment.html
+msgid "Track Changes URL"
+msgstr "Träçk Çhängés ÛRL Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмє#"
+
+#: openassessment/templates/openassessmentblock/edit/oa_edit_peer_assessment.html
+msgid ""
+"Specify the URL of the Track Changes library you wish to use. Leave empty to"
+" disable."
+msgstr ""
+"Spéçïfý thé ÛRL öf thé Träçk Çhängés lïßrärý ýöü wïsh tö üsé. Léävé émptý tö"
+" dïsäßlé. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢#"
+
 #: openassessment/templates/openassessmentblock/edit/oa_edit_prompt.html
 msgid "You cannot delete a prompt after the assignment has been released."
 msgstr ""
@@ -799,6 +811,11 @@ msgid "Submit feedback on peer assessments"
 msgstr ""
 "Süßmït féédßäçk ön péér ässéssménts Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєт#"
 
+#: openassessment/templates/openassessmentblock/grade/oa_grade_complete_with_trackchanges.html
+#: openassessment/templates/openassessmentblock/oa_submission_answer.html
+msgid "The question for this section"
+msgstr "Thé qüéstïön för thïs séçtïön Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢#"
+
 #: openassessment/templates/openassessmentblock/grade/oa_grade_incomplete.html
 msgid "Not Completed"
 msgstr "Nöt Çömplétéd Ⱡ'σяєм ιρѕυм ∂σłσя ѕι#"
@@ -1075,10 +1092,6 @@ msgstr "Prévïéw Réspönsé Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αм#"
 msgid "Comments"
 msgstr "Çömménts Ⱡ'σяєм ιρѕυм ∂#"
 
-#: openassessment/templates/openassessmentblock/oa_submission_answer.html
-msgid "The question for this section"
-msgstr "Thé qüéstïön för thïs séçtïön Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢#"
-
 #: openassessment/templates/openassessmentblock/oa_uploaded_file.html
 msgid "View the files associated with this submission:"
 msgstr ""
@@ -1144,11 +1157,33 @@ msgstr ""
 "                 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
 
 #: openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
+#, python-format
+msgid ""
+"\n"
+"                            Read, edit and assess the following response from one of your peers. You can make %(ins_start)sadditions%(ins_end)s and %(del_start)sdeletions%(del_end)s to help improve the submission.\n"
+"                        "
+msgstr ""
+"\n"
+"                            Réäd, édït änd ässéss thé föllöwïng réspönsé fröm öné öf ýöür péérs. Ýöü çän mäké %(ins_start)säddïtïöns%(ins_end)s änd %(del_start)sdélétïöns%(del_end)s tö hélp ïmprövé thé süßmïssïön.\n"
+"                         Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α∂ιριѕι¢ιηg єłιт, ѕє∂ ∂σ єιυѕмσ∂ тємρσя ιη¢ι∂ι∂υηт υт łαвσяє єт ∂σłσяє мαgηα αłιqυα. υт єηιм α∂ мιηιм νєηιαм, qυιѕ ησѕтяυ∂ єχєя¢ιтαтιση υłłαм¢σ łαвσяιѕ ηιѕι υт αłιqυιρ єχ єα ¢σммσ∂σ ¢σηѕєqυαт. ∂υιѕ αυтє ιяυяє ∂σłσя ιη яєρяєнєη∂єяιт ιη νσłυρтαтє νєłιт єѕѕє ¢ιłłυм ∂σłσяє єυ ƒυgιαт ηυłłα ραяιαтυя. єχ¢єρтєυя ѕιηт σ¢¢α#"
+
+#: openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
 #: openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode.html
 msgid "Read and assess the following response from one of your peers."
 msgstr ""
 "Réäd änd ässéss thé föllöwïng réspönsé fröm öné öf ýöür péérs. Ⱡ'σяєм ιρѕυм "
 "∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
+#, python-format
+msgid ""
+"\n"
+"                                                Assessment # %(review_number)s of %(num_must_grade)s\n"
+"                                            "
+msgstr ""
+"\n"
+"                                                Àsséssmént # %(review_number)s öf %(num_must_grade)s\n"
+"                                             Ⱡ'σяєм ιρѕυм ∂#"
 
 #: openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
 #: openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode.html
@@ -1244,6 +1279,17 @@ msgstr ""
 "\n"
 "        Çömplété (%(num_graded)s)\n"
 "       Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢т#"
+
+#: openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode.html
+#, python-format
+msgid ""
+"\n"
+"                      Read, edit and assess the following response from one of your peers. You can make %(ins_start)sadditions%(ins_end)s and %(del_start)sdeletions%(del_end)s to help improve the submission.\n"
+"                  "
+msgstr ""
+"\n"
+"                      Réäd, édït änd ässéss thé föllöwïng réspönsé fröm öné öf ýöür péérs. Ýöü çän mäké %(ins_start)säddïtïöns%(ins_end)s änd %(del_start)sdélétïöns%(del_end)s tö hélp ïmprövé thé süßmïssïön.\n"
+"                   Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α∂ιριѕι¢ιηg єłιт, ѕє∂ ∂σ єιυѕмσ∂ тємρσя ιη¢ι∂ι∂υηт υт łαвσяє єт ∂σłσяє мαgηα αłιqυα. υт єηιм α∂ мιηιм νєηιαм, qυιѕ ησѕтяυ∂ єχєя¢ιтαтιση υłłαм¢σ łαвσяιѕ ηιѕι υт αłιqυιρ єχ єα ¢σммσ∂σ ¢σηѕєqυαт. ∂υιѕ αυтє ιяυяє ∂σłσя ιη яєρяєнєη∂єяιт ιη νσłυρтαтє νєłιт єѕѕє ¢ιłłυм ∂σłσяє єυ ƒυgιαт ηυłłα ραяιαтυя. єχ¢єρтєυя ѕιηт σ¢¢αє¢αт ¢υρι∂αтαт ηση#"
 
 #: openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode_waiting.html
 msgid ""
